# 559Nanon

./: .gitignore  CMakeLists.txt  README.md  bootstrap_maya.bat  bootstrap_standalone.bat  nanon_maya.pro  qtconfig  scratch.py
python/_nanon/: kernel.py
python/nanon/: kernel.py
resources/syntaxes/: MagicPython.tmLanguage.json
src/: nanon.cpp  nanon.hpp  nanon_maya.cpp  nanon_maya.hpp  nanon_maya.pro  nanon_standalone.cpp  nanon_standalone.pro  nanon_utils.cpp  nanon_utils.hpp  qtconfig_maya
src/core/: CMakeLists.txt  nanon.cpp  nanon.hpp
src/core/interpreter/: nanon_python.cpp
src/core/interpreters/: nanon_python.cpp  nanon_python.hpp
src/core/io/: nanon_socket.hpp  nanon_textmate.cpp  nanon_textmate.hpp
src/core/nanon/: ui.cpp  ui.hpp  window.cpp  window.hpp
src/core/nanon/interpreter/: base.hpp  python.cpp  python.hpp
src/core/nanon/io/: config.cpp  config.hpp  socket.hpp  textmate.cpp  textmate.hpp
src/core/nanon/languages/: language.cpp  language.hpp
src/core/nanon/textmate/: engine.cpp  engine.hpp  grammar.cpp  grammar.hpp  rule.cpp  rule.hpp
src/core/nanon/widgets/: editor.cpp  editor.hpp  highlighter.cpp  highlighter.hpp
src/core/textmate/: nanon_engine.cpp  nanon_engine.hpp  nanon_grammar.cpp  nanon_rule.cpp  nanon_rule.hpp
src/interpreter/: nanon_interpreter_base.hpp  nanon_python.cpp  nanon_python.hpp
src/io/: nanon_socket.cpp  nanon_socket.hpp  nanon_textmate.cpp  nanon_textmate.hpp
src/maya/: CMakeLists.txt  maya_interpreter.cpp  maya_interpreter.hpp  maya_nanon.cpp  maya_nanon.hpp  nanon_maya.cpp  nanon_maya.hpp  nanon_maya_interpreter.cpp  nanon_maya_interpreter.hpp
src/standalone/: CMakeLists.txt  main.cpp  qtconfig_standalone
src/textmate/: nanon_engine.cpp  nanon_engine.hpp  nanon_grammar.cpp  nanon_grammar.hpp  nanon_pattern.cpp  nanon_pattern.hpp  nanon_rule.cpp  nanon_rule.hpp
